# SAMS

./: .cursorrules  .env  .env.backup  .gitignore  AUTHENTICATION_SETUP.md  DEPLOYMENT.md  Makefile  README.md  SECRETS_MIGRATION_SUMMARY.md  SECURITY.md  add-dummy-assets.sql  add-dummy-departments.sql  add-dummy-users.sql  check_password.go  docker-compose.yml  enable-uuid-extension.sql  env.example  init-db.sql  project-desc.md  setup-env.sh  test-deployment.sh  wait-for-db.sh
backend/: .env  Dockerfile  env.example  go.mod  go.sum  wait-for-db.sh
backend/cmd/: main.go
backend/cmd/create-users/: main.go
backend/internal/database/: database.go
backend/internal/handlers/: ai_handlers.go  asset_handlers.go  auth_handlers.go  category_handlers.go  department_handlers.go  user_handlers.go
backend/internal/middleware/: auth.go
backend/internal/models/: asset.go  auth.go  category.go  department.go  user.go
backend/scripts/: create-admin-user.sql
backup/: backup_db.sh  sams_db_backup_20250904194322.sql  sams_db_backup_20250905_015836.sql
custom_modes/: creative_instructions.md  implement_instructions.md  reflect_archive_instructions.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/: direct-login.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/utils/: api.ts  (+1 more)
mcp-client/: README.md  client.py  pyproject.toml
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
memory-bank/: activeContext.md  progress.md  tasks.md
password-check/: generate_hash.go  go.mod  main.go
(+27 files in other folders)
